<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RecipeDetailFragment">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scrollIndicators="top|bottom"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/recipe_detail_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="15dp"
            android:textColor="#E0E0E0"
            android:textSize="16sp" />
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />

</LinearLayout>